--- a/index.html
+++ b/index.html
@@ -34,25 +34,32 @@
         }
 
         #playersContainer {
-            display: flex;
-            flex-direction: row;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             height: 100%;
+            overflow-y: auto;
+        }
+
+        /* If there are only 2 players, we can try to keep them side by side on tablets, 
+           but on mobile we'll let it wrap based on min-width */
+        
+        @media (max-width: 600px) {
+            #playersContainer {
+                grid-template-columns: 1fr;
+            }
         }
 
         .player-section {
-            flex: 1 1 0;
-            min-width: 0;
-            min-height: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: stretch;
             position: relative;
-            height: 100%;
-            width: 0;
+            min-height: 300px;
             cursor: pointer;
             user-select: none;
             -webkit-user-select: none;
+            padding: 20px;
         }
 
         .player-content {
@@ -62,6 +69,7 @@
             justify-content: space-evenly;
             height: 100%;
             width: 100%;
+            max-width: 500px; /* Keep content centered and not too wide on desktop */
         }
 
         .player-avatar {
@@ -74,11 +82,25 @@
             justify-content: center;
         }
 
+        @media (max-width: 768px) {
+            .player-avatar {
+                width: 44px;
+                height: 44px;
+            }
+        }
+
         .player-avatar-icon {
             width: 30px;
             height: 30px;
             background: rgba(255, 255, 255, 0.5);
             border-radius: 50%;
+        }
+
+        @media (max-width: 768px) {
+            .player-avatar-icon {
+                width: 22px;
+                height: 22px;
+            }
         }
 
         .player-info {
@@ -88,55 +110,79 @@
         }
 
         .player-name {
-            font-size: 48px; /* Increased font size */
+            font-size: 48px;
             font-weight: bold;
             color: white;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
+        @media (max-width: 768px) {
+            .player-name {
+                font-size: 32px;
+            }
+        }
+
         .player-score {
-            font-size: 120px; /* Slightly larger visual hierarchy */
+            font-size: 120px;
             font-weight: bold;
             color: white;
             line-height: 1;
             text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 20px 0;
         }
 
-        /* .score-buttons { display: flex; gap: 10px; }  // legacy, replaced by .score-buttons-row */
+        @media (max-width: 768px) {
+            .player-score {
+                font-size: 80px;
+                margin: 10px 0;
+            }
+        }
+
         .score-buttons-row {
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 12px;
+            width: 100%;
         }
+
         .score-row {
             display: flex;
-            gap: 10px;
+            gap: 12px;
             justify-content: center;
+            width: 100%;
         }
 
         .score-btn {
-            padding: 15px 0;
+            padding: 15px 10px;
             font-size: 24px;
             font-weight: bold;
             border: none;
-            border-radius: 8px;
+            border-radius: 12px;
             background: white;
             cursor: pointer;
-            transition: transform 0.1s, box-shadow 0.1s;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            min-width: 120px;
+            transition: transform 0.1s, box-shadow 0.1s, background 0.2s;
+            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.1);
             text-align: center;
-            flex: 1 1 0;
+            flex: 1;
+            min-width: 0; /* Allow shrinking */
+        }
+
+        @media (max-width: 768px) {
+            .score-btn {
+                padding: 12px 5px;
+                font-size: 20px;
+                border-radius: 10px;
+            }
         }
 
         .score-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 6px 0 rgba(0, 0, 0, 0.1);
         }
 
         .score-btn:active {
-            transform: translateY(0);
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transform: translateY(2px);
+            box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
         }
 
         .top-bar {
